--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
-<html>
-  <body>
-   
+<html><head>
+  		<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+  	</head>
+  	<body style="margin:0">
+  		<div style="
+      background-color:#d2cbc3;
+      background-image: url('plaatjes/you-re-a-real-catch.png');
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+	  	color:whitesmoke;
+	  	font-size:64px;
+	  	font-family: 'Caveat', cursive;
+	  	position: relative;
+	    top: 50%;
+	    transform: translateY(-50%);
+	    text-align: center;
+      margin:0;
+      line-height:128px">
+		    	18 tot en met 20 februari 2022…
+		</div>
 
-	<center>CCXLV</center>
-
-  </body>
-</html>
+</body></html>
