--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	<body style="margin:0">
   		<div style="
       background-color:#d2cbc3;
-      background-image: url('plaatjes/you-re-a-real-catch.png');
+      background-image: url('plaatjes/you-re-a-real-catch!.png');
       height: 100%;
       background-position: center;
       background-repeat: no-repeat;
