--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
       background-repeat: no-repeat;
       background-size: cover;
 	  	color:#333;
-	  	font-size:64px;
+	  	font-size:20px;
 	  	font-family: 'Caveat', cursive;
 	  	position: relative;
 	    top: 50%;
 	    transform: translateY(-50%);
-	    text-align: center;
+	    text-align: left;
       margin:0;
-      line-height:128px">
+      line-height:64px
+      padding-left:20px"
+      >
 		    	18 tot en met 20 februari 2022…
 		</div>
 
