--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-	  	color:#333;
-	  	font-size:64px;
+	  	color:#63a740;
+	  	font-size:44px;
 	  	font-family: 'Caveat', cursive;
 	  	position: relative;
 	    top: 50%;
 	    transform: translateY(-50%);
-	    text-align: left;
+	    text-align: center;
       margin:0;
-      line-height:128px">
+      line-height:64px">
 		    	18 tot en met 20 februari 2022…
 		</div>
 
