--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background-color:#d2cbc3;
       background-image: url('plaatjes/you-re-a-real-catch!.png');
       height: 100%;
-      background-position: center;
+      background-position: auto;
       background-repeat: no-repeat;
       background-size: cover;
 	  	color:#63a740;
