--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       height: 100%;
       background-position: auto;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: contain;
 	  	color:#63a740;
 	  	font-size:44px;
 	  	font-family: 'Caveat', cursive;
 	  	position: relative;
 	    top: 50%;
 	    transform: translateY(-50%);
-	    text-align: center;
+	    text-align: left;
+      padding-left:20px;
       margin:0;
       line-height:64px">
 		    	18 tot en met 20 februari 2022…
